[package]
name = "pupsy_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
image = "0.23"
ash = { path = "ash/ash", default-features = false, features = ["linked", "debug"] }
ash-window = { path = "ash/ash-window" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }