[package]
name = "pupsy_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.0"
image = "0.23"
num = "0.2"
ash = "0.37.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }