[package]
name = "pupsy_engine"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.0"
image = "0.23"
num = "0.2"
cgmath    = "0.17.0"
memoffset = "0.5.1"
ash = { version = "0.37", default-features = false, features = ["debug", "linked"] }
imgui-winit-support = { version = "^0.8", default-features = false, features = ["winit-26"] }
imgui = { version = "^0.8", features = ["tables-api"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }